Modify the margin to correctly use spacing variable.

--- a/src/assets/stylesheets/layouts/_header.css
+++ b/src/assets/stylesheets/layouts/_header.css
@@ -1,5 +1,5 @@
 #header {
-  margin-top: 2em;
+  margin-top: var(--space-700);
 }
 
 #header ul {
